# advent-of-code

./: .gitignore  README.md
2019/python/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  helpers.py  pyproject.toml  template.py
2020/02/python/: solution.py
2020/python/: day4.py  day5.py  helpers.py
2020/python/01/: 01-solution.py
2020/python/03/python/: solution.py
2020/python/04/python/: solution.py
2021/: README.md
2021/01/rust/src/: lib.rs  main.rs
2021/02/python/: 02-solution.py
2021/02/rust/src/: main.rs
2021/03/: 03-solution.py
2021/03/rust/src/: main.rs
2021/04/python/: 04-solution.py
2021/04/python/optimized/: solution.py
2021/05/python/: solution.py
2021/06/python/: solution.py
2021/07/python/: solution.py
2021/08/python/: solution.py
2021/09/python/: solution.py
2021/10/python/: solution.py
2021/11/python/: solution.py
2021/12/python/: solution.py
2021/13/python/: solution.py
2021/15/python/: solution.py  solution2.py  solution3.py
2021/16/python/: solution.py
2021/18/python/: solution.py
2021/template/python/: solution.py
2022/01/rust/src/: main.rs
2022/python/: day3.py
2022/rust/: Cargo.toml
2022/rust/src/: day2.rs  day3.rs  lib.rs
2023/python/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py
2023/rust/src/: dayn.rs  main.rs
2024/python/: day1.py  day2.py  helpers.py  pyproject.toml
2024/rust/: Cargo.toml
2024/rust/src/: lib.rs
2025/python/: day1.py  pyproject.toml  template.py
template/python/: pyproject.toml  solution.py
