[tool.poetry]
name = "aoc-template"
version = "0.1.0"
description = ""
authors = ["gradiuscypher <gradiuscypher@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
ipython = "^8.18.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
